fixed the seed by lower-casing all tags on posts, changed share buttons spacing, but still can't get a nice horizontal aligned arrangement

--- a/app/assets/stylesheets/welcome.css.sass
+++ b/app/assets/stylesheets/welcome.css.sass
@@ -2,6 +2,9 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+div#facebook 
+  margin-top: -12px
+
 #mood-box
   padding: 0 10px
 
